--- a/SBERT/results/readme
+++ b/SBERT/results/readme
@@ -1,4 +1,4 @@
 The embedding results are located here,
 - for CheckThat_Lab in CheckThat_Lab Folder
 - for Aspect_Sentiment in ASPECT Folder
-- for FEVER the results are too big to upload in GitHub
+- for FEVER the results are too big to upload to GitHub
